# shooter2d

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README-ja.md  meson.build  shooter2d.sln
docs/: manual_for_users.md
scripts/: stage.lua
shooter2d/: Makefile  assets.cpp  assets.h  bullet.cpp  bullet.h  collider.cpp  collider.h  collision_detector.cpp  collision_detector.h  effect.cpp  effect.h  enemy.cpp  enemy.h  game.cpp  game.h  game_object.cpp  game_object.h  grabber.sh  input.cpp  input.h  main.cpp  media.cpp  media.h  meson.build  mover.cpp  mover.h  object.cpp  object.h  packages.config  player.cpp  player.h  resource.h  scene.cpp  scene.h  script.cpp  script.h  shooter2d.rc  shooter2d.vcxproj  shooter2d.vcxproj.filters  singleton.h  (+8 more)
shooter2d/scripts/: grabber.bat  grabber.sh  main.lua  marisa.lua  meson.build  reimu.lua  sanae.lua  stage.lua  stage1.lua  stage2.lua  stg.lua
subprojects/: sol2.wrap
